Always use transform to render target for checking backface visiblity.

Previously the local transform would sometimes be used if the
layer was "at the border of a 3D rendering context". This is
unnecessary complexity, and leads to the linked bug.

Bug: 714369
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I5507d88f0c35bb2dba7e0be99fcd6cdc8fe6f66d